# CascadedPIDcontroller

./: arm_yaml_OLD.yaml
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/mycustomcontroller/: .catkin  setup.sh
devel/.private/urdf_33/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/urdf_36/: .catkin  .rosinstall  setup.sh
devel/lib/mycustomcontroller/: setpointpub
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  mycustomcontroller.pc  urdf_33.pc  urdf_36.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/mycustomcontroller/cmake/: mycustomcontrollerConfig-version.cmake  mycustomcontrollerConfig.cmake
devel/share/urdf_33/cmake/: urdf_33Config-version.cmake  urdf_33Config.cmake
logs/mycustomcontroller/: build.make.000.log.stderr
src/mycustomcontroller/: CMakeLists.txt  plugin_description.xml
src/mycustomcontroller/config/: mycontroller.yaml
src/mycustomcontroller/include/: mycontroller.h
src/mycustomcontroller/src/: mycontroller.cpp  setpointpub.cpp
src/urdf_33/: package.xml
src/urdf_33/config/: arm.yaml
src/urdf_33/launch/: arm.launch
src/urdf_33/urdf/: urdf_33.urdf
src/urdf_36/: CMakeLists.txt  move.py
src/urdf_36/config/: arm.yaml
src/urdf_36/launch/: arm.launch
src/urdf_36/urdf/: urdf_36.urdf
(+11 files in other folders)
